---
source: crates/ruff/src/rules/flake8_pytest_style/mod.rs
expression: diagnostics
---
- kind:
    name: PytestExtraneousScopeFunction
    body: "`scope='function'` is implied in `@pytest.fixture()`"
    suggestion: "Remove implied `scope` argument"
    fixable: true
  location:
    row: 14
    column: 16
  end_location:
    row: 14
    column: 32
  fix:
    edits:
      - location:
          row: 14
          column: 16
        end_location:
          row: 14
          column: 32
        content: ~
  parent: ~
- kind:
    name: PytestExtraneousScopeFunction
    body: "`scope='function'` is implied in `@pytest.fixture()`"
    suggestion: "Remove implied `scope` argument"
    fixable: true
  location:
    row: 19
    column: 16
  end_location:
    row: 19
    column: 32
  fix:
    edits:
      - location:
          row: 19
          column: 16
        end_location:
          row: 19
          column: 34
        content: ~
  parent: ~
- kind:
    name: PytestExtraneousScopeFunction
    body: "`scope='function'` is implied in `@pytest.fixture()`"
    suggestion: "Remove implied `scope` argument"
    fixable: true
  location:
    row: 24
    column: 35
  end_location:
    row: 24
    column: 51
  fix:
    edits:
      - location:
          row: 24
          column: 33
        end_location:
          row: 24
          column: 51
        content: ~
  parent: ~
- kind:
    name: PytestExtraneousScopeFunction
    body: "`scope='function'` is implied in `@pytest.fixture()`"
    suggestion: "Remove implied `scope` argument"
    fixable: true
  location:
    row: 29
    column: 35
  end_location:
    row: 29
    column: 51
  fix:
    edits:
      - location:
          row: 29
          column: 35
        end_location:
          row: 29
          column: 53
        content: ~
  parent: ~
- kind:
    name: PytestExtraneousScopeFunction
    body: "`scope='function'` is implied in `@pytest.fixture()`"
    suggestion: "Remove implied `scope` argument"
    fixable: true
  location:
    row: 37
    column: 30
  end_location:
    row: 37
    column: 46
  fix:
    edits:
      - location:
          row: 37
          column: 28
        end_location:
          row: 37
          column: 46
        content: ~
  parent: ~
- kind:
    name: PytestExtraneousScopeFunction
    body: "`scope='function'` is implied in `@pytest.fixture()`"
    suggestion: "Remove implied `scope` argument"
    fixable: true
  location:
    row: 43
    column: 4
  end_location:
    row: 43
    column: 20
  fix:
    edits:
      - location:
          row: 43
          column: 4
        end_location:
          row: 44
          column: 4
        content: ~
  parent: ~
- kind:
    name: PytestExtraneousScopeFunction
    body: "`scope='function'` is implied in `@pytest.fixture()`"
    suggestion: "Remove implied `scope` argument"
    fixable: true
  location:
    row: 52
    column: 4
  end_location:
    row: 52
    column: 20
  fix:
    edits:
      - location:
          row: 51
          column: 21
        end_location:
          row: 52
          column: 20
        content: ~
  parent: ~
- kind:
    name: PytestExtraneousScopeFunction
    body: "`scope='function'` is implied in `@pytest.fixture()`"
    suggestion: "Remove implied `scope` argument"
    fixable: true
  location:
    row: 66
    column: 4
  end_location:
    row: 67
    column: 18
  fix:
    edits:
      - location:
          row: 66
          column: 4
        end_location:
          row: 70
          column: 4
        content: ~
  parent: ~

